<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.liu.springboot.quickstart</groupId>
  <artifactId>spring-boot-quickstart</artifactId>
  <packaging>jar</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>spring-boot-quickstart Maven Webapp</name>
  <url>http://maven.apache.org</url>

  <properties>
    <java.version>1.8</java.version>
	<!-- 文件拷贝时的编码 -->
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	<!-- 编译时的编码 -->
	<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
  </properties>  
  
  <parent>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-parent</artifactId>
      <version>1.5.6.RELEASE</version>
      <relativePath/>
  </parent>

  <dependencies>
  	<!-- spring boot aop -->
	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-aop</artifactId>
	</dependency>
	
	<!-- spring boot web 模块 -->
	<!-- spring-boot-starter-websocket就引入了spring-boot-starter-web -->
    <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-websocket</artifactId>
    </dependency>
    
    <!-- thymeleaf模板 -->
  	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-thymeleaf</artifactId>
	</dependency>

  	<!-- spring mybatis 依赖开始 -->
	<dependency>
	    <groupId>org.mybatis.spring.boot</groupId>
	    <artifactId>mybatis-spring-boot-starter</artifactId>
	    <version>1.3.0</version>
	</dependency>  
  	<!-- spring mybatis 依赖结束 -->
  	
    <!-- spring boot redis -->
	<dependency>
		<groupId>org.springframework.boot</groupId><!-- 会附带引进jedis-2.7.3的包 -->
		<artifactId>spring-boot-starter-data-redis</artifactId>
		<!-- <version>1.4.7.RELEASE</version> -->
	</dependency>
 	<dependency>
	    <groupId>org.springframework.session</groupId>
	    <artifactId>spring-session-data-redis</artifactId>
	</dependency>
	<!-- redis 分布式锁 -->
	<dependency>
	   <groupId>org.redisson</groupId>
	   <artifactId>redisson</artifactId>
	   <version>3.5.7</version>
	</dependency>
	
	<!-- spring mysql 依赖开始 -->
    <dependency>  
		<groupId>mysql</groupId>  
		<artifactId>mysql-connector-java</artifactId>  
		<version>5.1.42</version>
    </dependency>  
	<dependency>
		<groupId>com.alibaba</groupId>
		<artifactId>druid</artifactId>
		<version>1.1.0</version>
	</dependency>
	<dependency>
		<groupId>com.alibaba</groupId>
		<artifactId>druid-spring-boot-starter</artifactId>
		<version>1.1.1</version>
	</dependency>
    <!-- spring mysql 依赖结束 --> 
    <!-- jta事物开始 -->
    <dependency>  
        <groupId>org.springframework.boot</groupId>  
        <artifactId>spring-boot-starter-jta-atomikos</artifactId>  
    </dependency> 
	<!-- jta事物结束 -->
    <!-- 分页插件  开始-->  
    <dependency>  
        <groupId>com.github.pagehelper</groupId>  
        <artifactId>pagehelper</artifactId>  
        <version>4.1.6</version>  
    </dependency> 
    <!-- 分页插件  结束-->     
    <!-- junit test -->
	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-test</artifactId>
		<scope>test</scope>
	</dependency>
	<!-- zookeeper 依赖 -->
    <dependency>
        <groupId>org.apache.zookeeper</groupId>
        <artifactId>zookeeper</artifactId>
        <version>3.4.6</version>
        <exclusions>
            <exclusion>
                <artifactId>slf4j-log4j12</artifactId>
                <groupId>org.slf4j</groupId>
            </exclusion>
        </exclusions>
    </dependency>
    <!-- 加密 .yml文件 -->
	<dependency>
	  <groupId>com.github.ulisesbocchio</groupId>
	  <artifactId>jasypt-spring-boot-starter</artifactId>
	  <version>1.14</version>
	</dependency>	
	<!-- 各种视图解析 -->
 	<dependency>
	    <groupId>org.springframework</groupId>
	    <artifactId>spring-oxm</artifactId>
	    <version>4.3.10.RELEASE</version>
	</dependency>
<!-- 	<dependency>
	   <groupId>com.lowagie</groupId>
	   <artifactId>itext</artifactId>
	   <version>4.2.1</version>
	</dependency> -->
	<dependency>
	   <groupId>org.apache.poi</groupId>
	   <artifactId>poi</artifactId>
	   <version>3.10-beta2</version>
	</dependency>
	
	<dependency>
	    <groupId>com.github.abel533</groupId>
	    <artifactId>mapper</artifactId>
	    <version>3.0.0</version>
	</dependency>
  </dependencies>


<!--   <dependencyManagement>
      <dependencies>
          <dependency>
              <groupId>org.springframework.cloud</groupId>
              <artifactId>spring-cloud-dependencies</artifactId>
              <version>Dalston.RC1</version>
              <type>pom</type>
              <scope>import</scope>
          </dependency>
      </dependencies>
  </dependencyManagement>  --> 
  
  <build>
    <finalName>spring-boot-quickstart</finalName>
    <sourceDirectory>src/main/java</sourceDirectory>
	<testSourceDirectory>src/test/java</testSourceDirectory>
	<testResources>
		<testResource>
			<directory>src/test/resources</directory>
		</testResource>
	</testResources>
	<resources>
		<resource>
			<directory>src/main/resources</directory>
		</resource>
		<!-- 因为打包的是jar包，所以将webapp下的页面都显示的打包 -->
		<resource>
			<directory>src/main/webapp</directory>
		</resource>
		<resource>
			<directory>src/main/java</directory>
			<includes>
				<include>**/*.properties</include>
				<include>**/*.xml</include>
			</includes>
		</resource>
	</resources>
	<plugins>
		<!-- 打包时跳过测试 -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.5</version>
            <configuration>
                <skipTests>true</skipTests>
            </configuration>
        </plugin>
		<plugin>  
		    <groupId>org.springframework.boot</groupId>  
		    <artifactId>spring-boot-maven-plugin</artifactId>  
		</plugin> 
	</plugins>
  </build>
  
  <!-- 远程仓库 -->
<!--    <repositories>
      <repository>
          <id>spring-milestones</id>
          <name>Spring Milestones</name>
          <url>https://repo.spring.io/milestone</url>
          <snapshots>
              <enabled>false</enabled>
          </snapshots>
      </repository>
  </repositories> -->
</project>
